Update semantic type handling; replace `TRAIT` with `PREDICATE`, adjust logic and tests accordingly, and ensure compatibility with reasoner and constraint filters. Refactor for consistency and readability.